fix 2: text goes behind emoji button

--- a/src/shared/components/Chat/EditMessageInput/EditMessageInput.module.scss
+++ b/src/shared/components/Chat/EditMessageInput/EditMessageInput.module.scss
@@ -20,6 +20,7 @@ $phone-breakpoint: 415px;
   width: 100%;
   border-width: 0;
   outline: 0;
+  padding-right: 1.75rem;
 }
 
 .buttonContainer {
